pacman-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pacman 
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
