pacman-mongo-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: pacman
  labels:
    name: mongo
    app: pacman
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongo
      app: pacman
  template:
    metadata:
      labels:
        name: mongo
        app: pacman
    spec:
      containers:
      - image: bitnami/mongodb:latest
        name: mongo
        ports:
        - name: mongo
          containerPort: 27017
        volumeMounts:
        - name: mongodb
          mountPath: /bitnami/mongodb
      volumes:
      - name: mongodb
        persistentVolumeClaim:
          claimName: mongo-pvc
