pacman-front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman
  namespace: pacman
  labels:
    name: pacman
    app: pacman
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    name: pacman
    app: pacman
