pacman-mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: pacman
  labels:
    name: mongo
    app: pacman
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    name: mongo
    app: pacman
